/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.4.1/userguide/java_library_plugin.html
 */

// Apply the java-library plugin to add support for Java Library
apply plugin: 'java-library'

// Publishing stuff
apply plugin: 'maven'
group = 'com.github.jjos2372'

sourceCompatibility = "1.8";
targetCompatibility = "1.8";

// In this section you declare where to find the dependencies of your project
repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()

    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.ow2.asm:asm-tree:7.1'

    implementation 'com.github.burst-apps-team:burstkit4j:v0.9-beta1'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
}

javadoc {
    source = sourceSets.main.allJava
    classpath = configurations.compile
}
